WCAG IN progress

--- a/index.html
+++ b/index.html
@@ -2093,7 +2093,7 @@
         </div>
       </section>
     </main>
-    <footer>
+    <footer style="background: rgb(2 54 75)">
       <div class="container">
         <div class="row">
           <div class="col-md-4 text-center">
