--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
                 </li>
                 <li class="nav-item dropdown">
                   <a
-                    class="nav-link dropdown-toggle"
+                    class="nav-link dropdown-toggle focus-ring"
                     href="#"
                     id="navbarPublications"
                     role="button"
