--- a/about-us.html
+++ b/about-us.html
@@ -4,7 +4,7 @@
     <!-- Google tag (gtag.js) -->
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=G-9F3B5VV3T3"
+      src="https://www.eurekaselect.com/https://www.googletagmanager.com/gtag/js?id=G-9F3B5VV3T3"
     ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -90,7 +90,7 @@
     <!-- Google Tag Manager (noscript) -->
     <noscript
       ><iframe
-        src="https://www.googletagmanager.com/ns.html?id=GTM-5HWC8W72"
+        src="https://www.eurekaselect.com/https://www.googletagmanager.com/ns.html?id=GTM-5HWC8W72"
         height="0"
         width="0"
         style="display: none; visibility: hidden"
@@ -102,7 +102,7 @@
     <header>
       <div class="container">
         <script
-          src="https://www.recaptcha.net/recaptcha/api.js"
+          src="https://www.eurekaselect.com/https://www.recaptcha.net/recaptcha/api.js"
           async
           defer
         ></script>
@@ -111,7 +111,7 @@
           <div class="col-md-2">
             <a href="/"
               ><img
-                src="/images/logo.png"
+                src="https://www.eurekaselect.com/images/logo.png"
                 alt="Eurekaselect logo"
                 class="hvr-grow logo"
             /></a>
@@ -125,7 +125,7 @@
               href="https://bit.ly/41m0zYJ"
               ><img
                 alt="Bentham Newsletter"
-                src="/images/bentham_newsletter.webp"
+                src="https://www.eurekaselect.com/images/bentham_newsletter.webp"
                 title="newsletter banner"
               /><span class="sr-only sr-only-focusable"
                 >newsletter banner</span
@@ -503,7 +503,10 @@
                       <h4 class="text-md-center">Books</h4>
                       <div class="row">
                         <div class="col-md-4">
-                          <img src="/images/studying.svg" alt="e-Books" />
+                          <img
+                            src="https://www.eurekaselect.com/images/studying.svg"
+                            alt="e-Books"
+                          />
                         </div>
                         <div class="col-md-8">
                           <ul class="submenu-level1">
@@ -1380,14 +1383,18 @@
 
     <main id="static">
       <section class="pb-0 pt-1">
-        <img src="images/about-us.jpg" class="img-fluid w-100" alt="About Us" />
+        <img
+          src="https://www.eurekaselect.com/images/about-us.jpg"
+          class="img-fluid w-100"
+          alt="About Us"
+        />
       </section>
 
       <section>
         <div class="container">
           <div class="row">
             <div class="col-12">
-              <h2 class="h4">About Us</h2>
+              <h1 class="h4">About Us</h1>
 
               <hr />
             </div>
@@ -1539,7 +1546,7 @@
             <img
               alt="Bentham Science Publishers"
               class="wow fadeInDown footer-c-logo"
-              src="/images/logo.webp"
+              src="https://www.eurekaselect.com/images/logo.webp"
             />
 
             <div class="col-12 social-icons">
@@ -1665,7 +1672,7 @@
                   aria-label="Counter certification"
                   ><img
                     class="wow fadeInDown footer-logo"
-                    src="/images/counter-logo.webp"
+                    src="https://www.eurekaselect.com/images/counter-logo.webp"
                     alt="counter release 5 complaint"
                   /><span class="sr-only sr-only-focusable"
                     >Counter logo</span
@@ -1678,7 +1685,7 @@
       </div>
       <script
         data-cfasync="false"
-        src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"
+        src="https://www.eurekaselect.com/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"
       ></script>
       <script>
         document
@@ -1688,13 +1695,14 @@
             "CAPTCHA code: Enter the characters displayed to verify you are a human",
           );
       </script>
-    </footer>
-    <div class="bg-light py-2 px-0">
-      <div class="container text-center text-md-right">
-        <a href="/terms-and-conditions">© 2026 Bentham Science Publishers</a> |
-        <a href="/privacy-policy">Privacy Policy</a>
+      <div class="bg-light py-2 px-0">
+        <div class="container text-center text-md-right">
+          <a href="/terms-and-conditions">© 2026 Bentham Science Publishers</a>
+          |
+          <a href="/privacy-policy">Privacy Policy</a>
+        </div>
       </div>
-    </div>
+    </footer>
 
     <script src="https://www.eurekaselect.com/plugins/wow-animate/wow.min.js"></script>
     <script>
@@ -1726,7 +1734,7 @@
         </script> -->
     <script
       type="text/javascript"
-      src="https://ws.sharethis.com/button/buttons.js"
+      src="https://www.eurekaselect.com/https://ws.sharethis.com/button/buttons.js"
     ></script>
     <script>
       // share on social network link
